case/v24/readme.md
# Tune v24

**The quest: an unambiguous joining system over 22 consonants and
5 vowels.** Every compound must read exactly one way, and
the letters that make that true must be as few as possible.

**What v24 changed from v17.** A doubled sound is said once with
nothing after it, where v17 wrote a `w`. That frees `w` as a root
letter, which is 17 v16 pins back and the `kw sw tw` onsets. Five
endings were added beside it: `gd kt rm rn lv`.

`V24_TWIN_W=1` puts the `w` seam back and takes `w` out of the
alphabet again, for comparing the two.

Generated by `case/v24/code/guide.ts` from `case/v24/code/rule.ts`.
Every figure is measured over all 16,777,216 ordered
pairs of 4,096 roots, drawn across the
shapes in proportion, and every example is a real pair found in the
pool.

## The sounds

Tune above, and IPA under it only where the two differ.

```
vowels
  i  e  a  o  u  

consonants
  m  n  q  b  d  g  p  t  k  h  s  z  f  v  x  j  c  C  y  l  r  w  
        ŋ        ɡ                          ʃ  ʒ  θ  ð  j
```

Seven letters move: `q` is ŋ, `g` is ɡ, `x` is ʃ, `j` is ʒ, `c` is θ, `C` is ð, `y` is j.

**`j` is the one that moves twice.** Tune's `j` is ʒ and Tune's `y`
is IPA's j, so a chain of replacements would send `y` to `j` and
then that `j` on to `ʒ`. Every conversion here walks the letters
once instead.

## The clusters

A root opens on one consonant or on one of these, and closes on one
consonant or on one of these.

```
starts 30
bl   br   cr   dj   dr   fl   fr   gl
gr   kl   kr   pl   pr   sk   sl   sm
sn   sp   st   tr   tx   xl   skl  skr
spl  spr  str  kw   sw   tw

ends 34
dj   ft   fk   lc   lf   lk   lp   lt
mp   nd   nt   qk   rb   rd   rf   rg
rk   rp   rt   sk   sp   st   tx   zb
zd   zg   ndj  ntx  qkc  gd   kt   rm
rn   lv

diphthongs 3
ai  au  oi
```

A single consonant opens a root except `q`, and closes one except
`y`, `w` and `h`.

## The shapes

Every root is one syllable. `VV` is a diphthong, `ai` or `au`.

```
CVC       CVCC      CVCCC     CVVC      CVVCC     CVVCCC
CCVC      CCVCC     CCVCCC    CCVVC     CCVVCC    CCVVCCC
CCCVC     CCCVCC    CCCVCCC   CCCVVC    CCCVVCC   CCCVVCCC
```

## What a root may not be

```
no root opens wa
at most one of x and j
at most one of c and C
no il el ir er ul ur                except -ul word finally
no same liquid across a vowel       rar, lal refused
no medial h
nothing on the taboo list
no liquid either side of the vowel when BOTH ends are clusters
                                    blark and blalk refused
```

## Two roots apart

Two roots must be at least two steps apart, where one step is a near
sound in one position.

```
at an onset     s z    f v    x j    c C
at a coda       b d    b p    d t    g k    p t
                f v    f c    v C    c C    l r
two nuclei      never near, except ai oi, which close alike
```

**And in any root carrying a cluster**, four more pairs count as near at
every consonant position:

```
b p     d t     g k     m n
```

`CVC` and `CVVC` are exempt, which is what keeps the short words.

```
nain  main     no cluster       both stand
brain prain    cluster onset    one of them goes
snain smain    cluster onset    one of them goes
faind vaind    cluster coda     one of them goes
```

## The joiner

| example | written | the seam | share |
| --- | --- | --- | --- |
| rij + drom = rijdrom<br>*rhythm drum* | nothing | anything else | 71.38% |
| tok + gan = toksgan<br>*tree garden* | `s` | two stops of one place, voiceless left | 2.98% |
| sid + tok = sidztok<br>*seed tree* | `z` | two stops of one place, voiced left | above |
| mant + drom = mantsdrom<br>*mountain drum* | `s` or `z` | the same, after a cluster coda | above |
| must + drom = mustldrom | a liquid | the same, after a coda opening on `s` | above |
| none in the pool | `r` | the same, after a coda opening on `z` | above |
| lif + vit = liflvit<br>*leaf life* | a liquid | a fricative voicing pair | 1.90% |
| vit + tok = vitok<br>*life tree* | the sound once | the same sound doubled | 4.84% |
| red + drom = redldrom<br>*red drum* | a liquid, both roots whole | the same, cluster on the right | above |
| drom + man = dromzman<br>*drum mind* | `z` | a doubled nasal | 0.27% |
| djul + lun = djulrlun<br>*jewel moon* | `r` after `l`, `z` after `r` | a doubled liquid | 0.07% |
| ram + yam = ramlyam<br>*dark day* | a liquid | a root opening on `y` | 2.00% |
| mim + skliq = mimlskliq | a liquid | a three letter cluster at the seam | 15.91% |
| mim + pifk = mimlpifk | a liquid | the cut is in doubt | 0.63% |

Every example above is the bare seam. **Said aloud a noun takes the
ending `-a`**, and the stress falls on the second to last VOWEL, so
`rij + drom` is spoken `rijdroma`, /ɾiʒdɾˈoma/.

**A liquid joiner takes a helper vowel in speech and never in
writing**, or a voice runs the three consonants together and the
joiner is not heard: `djulrluna` is said `djulırluna`,
/dʒulɯɾlˈuna/. `ı` is `ɯ`, and it is four of these ten words.

### Which liquid

6 of the rows above write "a liquid" rather than an `l`, because an
`l` stops being a joiner the moment it lands beside another one: `ll`
is one long `l` to a listener, and a joiner nobody can hear is not a
joiner. So the letter moves, and where both liquids are already spoken
for it leaves the liquids entirely.

```
the coda is l and a consonant        r      balc + Cak = balcrCak
  and the right root opens on r      ri
l meeting l, l meeting r, r meeting l   i
the left root closes on l            r      bal + yan = balryan
anything else                        l      bat + yan = batlyan
```

**The `i` breaks the `il` and `ir` rhyme ban on purpose.** That rule
governs ROOTS, where a close vowel before a liquid is swallowed into
it. A seam is not inside a root, and a vowel is the one thing that
cannot be mistaken for cluster material, so it is the safest joiner the
language has and the least available inside a word.

Every joiner stands BETWEEN two roots, so both keep their spelling and
the joiner lifts back out. One row does not: a doubled sound is said
once and nothing marks it, so \`vit + tok\` is \`vitok\`. A VOWEL
standing where an onset should be is what tells a reader a sound was
dropped, and which sound it was is fixed, since a twin is two of the
same consonant.

## How often anything is written

| | share |
| --- | --- |
| for SOUND, the six cases | 12.07% |
| for the CUT, a three letter cluster | 15.91% |
| for the CUT, this pool would read two ways | 0.63% |
| **anything at all** | **28.62%** |
| nothing written | 71.38% |

**The two cut rows are not the same kind of fact.** A three letter
cluster takes a liquid because of what the two roots ARE, so it holds
whatever words the language later gains. The last row is what THIS
pool of 4,096 would otherwise spell two
ways, so it moves when the words do.

Mean length of a joined pair: 9.42 sounds.

## Does it read

```
every ordered pair        16,777,216   read two ways 0
3 roots, 2,000 compounds   read two ways 23
4 roots, 2,000 compounds   read two ways 17
```

Pairs are exhaustive. The deeper runs are samples, because a
disagreement can span three roots without appearing in any pair.

Two facts carry it. **No root opens or closes on a vowel**, so a vowel
between two consonants is never root material. **A joiner sits where
the cluster lists allow no such letter**, so it can be lifted back
out.

**v17 had a third, and v24 spent it.** No root held a `w` there,
so a `w` was always a joiner and a dropped twin was marked. v24 writes
the doubled sound once and marks nothing, which buys `w` as a root
letter and 17 pins back, and costs the guarantee at depth three:
`zarg + gif` and `zar + gif` both spell `zargif`. Pairs still read
one way. Deeper compounds are the 23 above.

## How many roots

| template | legal | usable |
| --- | --- | --- |
| `CVC` | 1,809 | 1,136 |
| `CVCC` | 2,206 | 913 |
| `CVCCC` | 281 | 153 |
| `CVVC` | 1,033 | 568 |
| `CVVCC` | 964 | 426 |
| `CVVCCC` | 165 | 85 |
| `CCVC` | 2,173 | 1,144 |
| `CCVCC` | 2,270 | 960 |
| `CCVCCC` | 340 | 180 |
| `CCVVC` | 1,276 | 635 |
| `CCVVCC` | 1,182 | 506 |
| `CCVVCCC` | 204 | 101 |
| `CCCVC` | 438 | 288 |
| `CCCVCC` | 400 | 200 |
| `CCCVCCC` | 75 | 50 |
| `CCCVVC` | 260 | 145 |
| `CCCVVCC` | 240 | 110 |
| `CCCVVCCC` | 45 | 25 |
| **total** | **15,361** | **7,625** |

**Legal** is what the sound rules allow. **Usable** is what survives
the distance rule, and the gap is what that rule costs per shape.

3,529 spare over 4,096.

Run with `V17_DIPHTHONG=0` for the count without `ai` and `au`.

## What else is here

| file | what |
| --- | --- |
| `base/term/usable/` | every usable root, one file per shape, plus `all.txt` and `all-ipa.txt` |
| `base/term/legal/` | every root the sound rules allow, before the distance rule |
| `base/term/pinned.csv` | 460 concepts that already have a form |
| `base/term/lost.csv` | 25 v16 words v17 cannot spell, and why |
| `base/term/words.csv` | 9 words, the ones the video says |
| `base/voice/` | the recordings, and the video in both shapes |

```
pnpm --dir deck/tune v24:every     the root lists
pnpm --dir deck/tune v24:pinned    the pins
pnpm --dir deck/tune v24:words     the words file
pnpm --dir deck/tune v24:guide     this page
```
